--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "apexcharts": "^3.20.0",
     "core-js": "^3.6.5",
-    "moment": "^2.27.0",
     "vue": "^2.6.11",
-    "vue-apexcharts": "^1.6.0",
     "vue-class-component": "^7.2.3",
+    "vue-google-charts": "^0.3.3",
     "vue-property-decorator": "^8.4.2"
   },
   "devDependencies": {
@@ -28,6 +26,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "fork-ts-checker-webpack-plugin": "^5.0.13",
     "prettier": "^1.19.1",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
