--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "moment": "^2.27.0",
     "vue": "^2.6.11",
+    "vue-async-computed": "^3.8.2",
     "vue-class-component": "^7.2.3",
     "vue-google-charts": "^0.3.3",
     "vue-property-decorator": "^8.4.2"
@@ -27,8 +28,11 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "fibers": "^5.0.0",
     "fork-ts-checker-webpack-plugin": "^5.0.13",
     "prettier": "^1.19.1",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.3",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   }
